[gd_scene load_steps=7 format=3 uid="uid://b004jp7cl1frr"]

[ext_resource type="Script" uid="uid://c1qwnw1xolj5b" path="res://script/pause_menu.gd" id="1_d0m0u"]
[ext_resource type="FontFile" uid="uid://iypkrxy25ib3" path="res://assets/Jersey15-Regular.ttf" id="2_2r6so"]
[ext_resource type="LabelSettings" uid="uid://nnb6obldfvup" path="res://assets/label assets/label settings.tres" id="3_bbi7a"]

[sub_resource type="LabelSettings" id="LabelSettings_84wfh"]
font = ExtResource("2_2r6so")
font_size = 46
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d0m0u"]
font = ExtResource("2_2r6so")
font_size = 46
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2r6so"]
font = ExtResource("2_2r6so")
font_size = 46
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0m0u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 65.0
offset_top = 49.0
offset_right = 1106.0
offset_bottom = 605.0

[node name="Title" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 293.0
offset_top = 32.0
offset_right = 732.0
offset_bottom = 82.0
text = "Color Changing Platform"
label_settings = SubResource("LabelSettings_84wfh")
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 424.0
offset_top = 184.0
offset_right = 562.0
offset_bottom = 234.0
text = "Progress:"
label_settings = SubResource("LabelSettings_d0m0u")
autowrap_mode = 2

[node name="ProgressValue" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 597.0
offset_top = 187.0
offset_right = 684.0
offset_bottom = 264.0
text = "0"
label_settings = SubResource("LabelSettings_2r6so")

[node name="Resume" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 759.0
offset_top = 330.0
offset_right = 972.0
offset_bottom = 389.0
autowrap_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/Resume"]
layout_mode = 0
offset_left = 49.0
offset_top = 9.0
offset_right = 163.0
offset_bottom = 50.0
text = "Resume"
label_settings = ExtResource("3_bbi7a")
horizontal_alignment = 1

[node name="Settings" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 759.0
offset_top = 403.0
offset_right = 972.0
offset_bottom = 462.0
autowrap_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/Settings"]
layout_mode = 0
offset_left = 44.0
offset_top = 12.0
offset_right = 171.0
offset_bottom = 53.0
text = "Settings"
label_settings = ExtResource("3_bbi7a")

[node name="HomePage" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 760.0
offset_top = 472.0
offset_right = 971.0
offset_bottom = 526.0
autowrap_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/HomePage"]
layout_mode = 0
offset_left = 32.0
offset_top = 9.0
offset_right = 180.0
offset_bottom = 50.0
text = " Main menu"
label_settings = ExtResource("3_bbi7a")

[connection signal="pressed" from="CanvasLayer/Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HomePage" to="." method="_on_home_page_pressed"]
